# brasileirao-fivethirtyeight

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: Brasileirao2023A.csv  Brasileirao2023A.txt  Brasileirao2024A.csv  Brasileirao2024A.txt  Brasileirao2025A.csv  Brasileirao2025A.txt
src/brasileirao/: __init__.py  cli.py  evaluate.py  simulator.py  spi_coeffs.py
tests/: test_cli.py  test_simulator.py
